# rpic-srv

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: linux-build-and-tests.yml
config/: server_config.json
src/: entry-point.cpp  server-paths.hpp  server-patterns.hpp  server-version.hpp.in  server-version.ixx.in
web/ControllerWebsite/: health-check.html  index.html
web/ControllerWebsite/css/: health-check.css  main-page.css  main-theme.css
web/ControllerWebsite/js/health-check/: query-server-info.js
